# CanIGoIn

./: README.md
extension/: README.md  analyze_logs.py  analyze_youtube_blocks.py  background.js  background.js.tmp  chatgpt-fetch-intercept.js  chatgpt-file-upload.js  content.js  create-icons.py  create-icons.sh  create-placeholder-icons.sh  extension-monitor.js  manifest.json  page-context-clipboard.js  popup.html  popup.js  youtube-blocker.js
server/: Cargo.toml  README.md  schema.sql
server/src/: main.rs  packet_id.rs  production.rs  simple.rs  types.rs
server/src/handlers/: blocklist.rs  common.rs  dashboard.rs  extensions.rs  logs.rs  mod.rs
server/static/: dashboard.html
