[package]
name = "network-logger-server"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }

# Optional production dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"], optional = true }
redis = { version = "0.24", features = ["tokio-comp"], optional = true }
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }

[features]
default = []
production = ["sqlx", "redis", "uuid"]

[[bin]]
name = "network-logger-server"
path = "src/main.rs"
